Finish making test work

--- a/test/fake.conf
+++ b/test/fake.conf
@@ -2,5 +2,6 @@
   "instrument": "ISIS_Histogram",
   "script_dir": "test",
   "update_every": 3,
-  "accum_method":"Replace"
+  "accum_method":"Replace",
+  "periods":[1,3],
 }
