Add mantid to make life easier for developers

--- a/test/fake.conf
+++ b/test/fake.conf
@@ -2,6 +2,7 @@
   "instrument": "ISIS_Histogram",
   "script_dir": "test",
   "update_every": 3,
+  "CONDA_ENV": "livereduce",
   "accum_method":"Replace",
   "periods":[1,3]
 }
