--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,9 @@ name: livereduce
 
 channels:
   - conda-forge
+  - mantid
 
 dependencies:
+  - mantid # framework only
+  - pyinotify
   - pre-commit
