--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,4 @@
 line-length = 120
 # https://beta.ruff.rs/docs/rules/
-select = ["A", "ARG", "BLE", "E", "F", "I", "PT", "S", "UP"]
+select = ["A", "ARG", "BLE", "E", "F", "I", "PL", "PT", "S", "UP"]
 ignore = []
