--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,8 @@ requires = [
    ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["."]
+exclude = ["test"]
+
 #TODO define entrypoints
