--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ requires = [
    ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+include-package-data=true
+
 [tool.setuptools.packages.find]
 where = ["."]
 exclude = ["test"]
