--- a/test/fake_event.conf
+++ b/test/fake_event.conf
@@ -3,5 +3,7 @@
   "script_dir": "test",
   "update_every": 3,
   "CONDA_ENV": "livereduce",
-  "accum_method":"Add"
+  "accum_method":"Add",
+  "system_mem_limit_perc": 25,
+  "mem_check_interval_sec": 1
 }
