--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,3 +29,17 @@ jobs:
       run: | # this is used as part of making the rpm
         pixi run build
         # the package isn't built because this is a unusual package
+
+  rpm:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Setup Pixi
+      uses: prefix-dev/setup-pixi@v0.8.14
+    - name: Build sdist
+      run: pixi run build
+    - name: Build RPM inside of docker
+      run: |
+        docker build --tag rpmbuilder -f Dockerfile .
+        docker run -t rpmbuilder python3 -c "import livereduce; print('livereduce version:', livereduce.__version__)"
