--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,6 +30,18 @@ jobs:
         pixi run build
         # the package isn't built because this is a unusual package
 
+  rpmlint:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Builder docker image
+      run: docker build -f Dockerfile.rpmlint -t rpmlint .
+    - name: Lint rpm
+      run: |
+        echo "This passes with warnings"
+        docker run  -v ./livereduce.spec:/tmp/livereduce.spec rpmlint:latest rpmlint -i  /tmp/livereduce.spec
+
   rpm:
     runs-on: ubuntu-latest
     steps:
