--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,7 +37,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build and push Docker images
+    - name: Build Docker images
       uses: docker/build-push-action@v6
       with:
         file: Dockerfile.rpmlint
@@ -51,7 +51,7 @@ jobs:
         docker load --input ${{ runner.temp }}/rpmlint.tar
         docker run -v ./livereduce.spec:/tmp/livereduce.spec neutrons/rpmlint:latest rpmlint -i  /tmp/livereduce.spec
 
-  rpm:
+  rpm-build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -60,7 +60,12 @@ jobs:
       uses: prefix-dev/setup-pixi@v0.8.14
     - name: Build sdist
       run: pixi run build
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Build and verify RPM inside Docker
-      run: |
-        docker build --tag rpmbuilder -f Dockerfile .
-        echo "RPM build completed successfully"
+      uses: docker/build-push-action@v6
+      with:
+        file: Dockerfile
+        tags: neutrons/rpmbuilder:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
