--- a/test/fake.conf
+++ b/test/fake.conf
@@ -4,5 +4,9 @@
   "update_every": 3,
   "CONDA_ENV": "livereduce",
   "accum_method":"Replace",
-  "periods":[1,3]
+  "periods":[1,3],
+  "watchdog": {
+    "interval": 60,
+    "threshold": 300
+  }
 }
