--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,16 @@ jobs:
     - name: Run RPM spec quick check
       run: ./test/rpm/quick_check.sh
 
+  bash-tests:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v6
+    - name: Setup Pixi
+      uses: prefix-dev/setup-pixi@v0.9.3
+    - name: Run BATS tests
+      run: pixi run test-bash
+
   python-build:
     runs-on: ubuntu-latest
     steps:
