--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ channels = ["conda-forge", "mantid", "https://prefix.dev/pixi-build-backends"]
 platforms = ["linux-64"]
 preview = ["pixi-build"]
 
+[tool.pixi.environments]
+default = { features = [
+  "test",
+], solve-group = "default" }
+
 [tool.pixi.package.build]
 backend = { name = "pixi-build-python", version = "0.1.*" }
 
@@ -36,5 +41,11 @@ argcomplete = ">=3.6.3,<4"
 [tool.pixi.pypi-dependencies]
 livereduce = { path = ".", editable = true }
 
+[tool.pixi.feature.test.dependencies]
+bats-core = "*"
+
 [tool.pixi.tasks]
 build = "hatchling build -t sdist"
+
+[tool.pixi.feature.test.tasks]
+test-bash = "bats test/test_livereduce.bats"
